# Prompt-trainer

./: .gitignore  LICENSE  README.md  precommit.yaml  pyproject.toml
.github/workflows/: django.yml  lint.yml
prompt_train/: .env_example  Makefile  manage.py
prompt_train/chat/: admin.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
prompt_train/chat/migrations/: 0001_initial.py  0002_alter_message_options_message_edited_at_and_more.py  0003_alter_message_options_message_is_read_conversation_and_more.py
prompt_train/docker/: .dockerignore  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml
prompt_train/nginx/: nginx.conf
prompt_train/prompt_gamified/: adapters.py  admin.py  ai_func.py  api_views.py  apps.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
prompt_train/prompt_gamified/migrations/: 0001_initial.py  0002_cosmetic.py  0002_initial.py  0003_alter_prompt_user.py  0003_remove_cosmetic_image_cosmetic_svg_cosmetic_user.py  0004_alter_prompt_rate.py  0004_rename_svg_cosmetic_svg_code.py  0005_remove_cosmetic_user_cosmetic_rank_required_and_more.py  0006_auto_20260220_1522.py  0007_alter_cosmetic_rank_required_alter_cosmetic_svg_code.py
prompt_train/prompt_train/: asgi.py  celery.py  oauth.py  oauth_secret_example.txt  settings.py  settings_test.py  urls.py  wsgi.py
prompt_train/static/css/: main.css
prompt_train/static/js/: main.js  theme.js
prompt_train/templates/: base.html  nav.html
prompt_train/templates/socialaccount/: login.html
prompt_train/users/: admin.py  apps.py  forms.py  models.py  signals.py  storage_backends.py  tasks.py  tests.py  urls.py  views.py
prompt_train/users/migrations/: 0001_initial.py  0002_alter_customuser_nickname_alter_customuser_rank.py  (+7 more)
(+24 files in other folders)
