[project]
name = "prompt-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-crispy-forms>=2.5",
    "black>=25.12.0",
    "crispy-bootstrap5>=2025.6",
    "django-filter>=25.2",
    "python-decouple>=3.8",
    "psycopg>=3.3.2",
    "perplexityai>=0.26.0",
    "celery>=5.6.2",
    "redis>=7.1.0",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-sslserver>=0.22",
    "django-sslserver-v2>=1.0",
]
