[project]
name = "prompt-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-crispy-forms>=2.5",
    "black>=25.12.0",
    "crispy-bootstrap5>=2025.6",
    "django-filter>=25.2",
    "python-decouple>=3.8",
    "psycopg>=3.3.2",
    "celery>=5.6.2",
    "redis>=7.1.0",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-sslserver-v2>=1.0",
    "authlib>=1.6.6",
    "requests>=2.32.5",
    "channels>=4.0.0",
    "channels-redis>=4.0.0",
    "daphne>=4.0.0",
    "django-allauth>=65.14.0",
    "openai>=2.16.0",
    "whitenoise>=6.11.0",
    "ruff>=0.15.0",
    "pillow>=12.1.1",
    "django-storages>=1.14.6",
    "boto3>=1.42.49",
]
